--- a/paginas/experimentosPaginas/ejemploCsvJsonTables.html
+++ b/paginas/experimentosPaginas/ejemploCsvJsonTables.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+        <meta content="text/html" http-equiv="Content-Type">
         <meta content="utf-8" http-equiv="encoding">
         <title>wetransfer</title>
         <script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous">
